# Palaxy

./: .gitignore  .prettierignore  .prettierrc  PurpleGalaxy.ts  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: generate-builds.yml
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: collector.rs  commands.rs  main.rs  prelude.rs
src-tauri/src/generator/: cbz.rs  epub.rs  mod.rs  pdf.rs
src-tauri/templates/: template.css  template.xhtml  template.xml
src/components/: display.svelte
src/components/beta_converter/: TabAnalyzeSource.svelte  TabDirectories.svelte  TabPreVolumeSelector.svelte  TabVolumeSelector.svelte  types.ts
src/components/converter/: Tab.svelte  analysis.svelte  converter.svelte  directory.svelte  format.svelte  index.ts  stores.ts  types.ts  volumes.svelte
src/components/converter/tabs/: BundleMethodSelector.svelte  BundleSelector.svelte  ConfigureConverter.svelte  FilterImages.svelte  SourceAnalyze.svelte  SourceSelector.svelte  VolumeSelector.svelte  VolumeSorter.svelte
src/lib/: constants.ts  fsm.ts  functions.ts  stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/beta_converter/: +page.svelte
src/routes/convert/: +page.svelte
src/routes/converter/: +page.svelte
src/routes/scripting/: +page.svelte
src/routes/settings/: +page.svelte
