[package]
name = "Palaxy"
version = "0.2.0"
description = "The manga converter for the modern age"
authors = ["LuMiSxh"]
license = ""
repository = ""
default-run = "Palaxy"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [ "protocol-asset", "macos-private-api"] }
thiserror = "1.0.58"
regex = "1.10.3"
image = "0.25.0"
lazy_static = { version = "1.4.0", features = [] }
tokio = { version = "1.35.1", features = ["fs"] }
epub-builder = "0.7.4"
zip = "0.6.6"
rayon = "1.9.0"
eyre = "0.6.12"
printpdf = { version = "0.7.0", features = ["image", "embedded_images"] }
tauri-plugin-dialog = "2.0.0-RC.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
